@@ -1,3 +1,12 @@
+[B]0.6.4[/B]
+Gotham Work Begins
+ - Added Settings Level Change (press left from settings category)
+ - Added Settings Level indicator
+ - Added Settings Description
+
+Added weather to Simple Home Screen when profile info is disabled
+Changed Navigation on Simple Home (Down for submenu Up for widgets always)
+
 [B]0.6.3[/B]
 Made infostrip wider
 Infostrip big posters (show labels view option)
